2003-02-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/fill-style.c (sp_fill_style_widget_paint_changed): Set CMYK before RGB

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_changed): Set CMYK before RGB

2003-02-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-gradient.c (sp_gradient_rebuild_vector): Fix crash if 2 stops coincide

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_generic_glyph_mask_render): Get real
	bounding box, clip to pixblock area for SVP glyphs

	* src/sp-polygon.c (sp_polygon_write): Write points always

2003-02-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c (sp_export_dialog): Default to document name + png
	(sp_export_spinbutton_new): Pack more functions here

	* src/sp-chars.c (sp_chars_update): Implement

	* src/sp-text.c (sp_tspan_update): Implement

	* Makefile.am: Port back to glib gettext

	* configure.in: Port back to glib gettext

	* autogen.sh: Copied working version from The Gimp

	* src/helper/sp-canvas.c (sp_canvas_paint_rect): Try to fit area into pixelstore
	instead of using default image size always

2003-02-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-path.h: Turned SPPath/SPShape hierachy upside down, so they make sense
	now, when we do not derive text and clippath from SPPath anymore

	* src/sp-shape.h: Ditto

2003-02-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/file.c (file_open_ok): Set directory if OK clicked on it (thanks to Aron Rubin)
	(file_import_ok): Ditto

	* src/sp-ellipse.c (sp_round): Fix sp_round

2003-02-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/paint-selector.c (sp_paint_selector_system_color_set): New method
	(sp_paint_selector_set_mode_color): Added 'get from dropper' checkbox

	* src/dialogs/object-properties.c (sp_object_properties_color_set): Handler
	of system 'color_set' signal, used for getting color value from dropper

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_system_color_set): New method
