@@ -11,7 +11,8 @@ endif
 INCLUDES = \
 	-I.. \
 	$(SODIPODI_CFLAGS) \
-	$(GNOME_PRINT_CFLAGS)
+	$(GNOME_PRINT_CFLAGS) \
+	$(FONTCONFIG_CFLAGS)
 
 libnrtype_a_SOURCES = \
 	nr-type-primitives.c nr-type-primitives.h \
