@@ -1,4 +1,13 @@
+2003-02-22  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/sp-text.c (sp_text_set_shape): Honour single dx and dy attributes
+
+	* configure.in: Added check for fontconfig to retrieve nonstandard include directories
+
 2003-02-21  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/sp-image.c (sp_image_set): Set canvas item properties in ::update
+	(sp_image_update): Implement
 
 	* src/dialogs/fill-style.c (sp_fill_style_widget_paint_changed): Set CMYK before RGB
 
